--- a/src/app/phonelist/phonelist.component.html
+++ b/src/app/phonelist/phonelist.component.html
@@ -11,7 +11,7 @@
       <!-- <p>{{ phone.id }} {{ phone.age }}</p> -->
       <p class="phone-desc">{{ phone.snippet }}</p>
       <section class="buttons-group">
-          <button class=" btn details">DETAILS</button>
+          <button class=" btn details" routerLink="details/{{ phone.id }}">DETAILS</button>
           <button class=" btn buy">BUY</button>
       </section>
     </div>
