--- a/src/app/phone-details/phone-details.component.css
+++ b/src/app/phone-details/phone-details.component.css
@@ -1,6 +1,10 @@
 .container{
     font-family: 'Open Sans Condensed', sans-serif;
 }
+h2{
+    padding-bottom: 10px;
+    margin-top: -20px;
+}
 .section{
     text-align: center;
 }
@@ -11,7 +15,35 @@
     margin-top: 20px;
     padding: 10px 15px;
 }
-
-img{
-    width: 20%;
+li{
+    list-style: none;
 }
+img{
+    width: 50%;
+    padding-bottom: 10px;
+}
+h5{
+    font-size: 20px;
+    text-decoration: underline 0.5px gray;
+}
+.details{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25% ;
+    padding: 10px 10px 50px 10px;
+}
+.images{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.zoom {
+    padding: 25px;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  
+  .zoom:hover {
+    transform: scale(1.5);
+  }
